@@ -132,11 +132,13 @@ case ${query} in
     --built-library)
       LIB_PATH=${BUILD_DIR}/src
       GCC_LIB_PATH=${BUILD_DIR}/../../gcc
+      CROSS_LIB_PATH=${BUILD_DIR}/../newlib
       CXX="${BUILD_DIR}/../../gcc/g++ -B${BUILD_DIR}/../../gcc/"
       ;;
     --installed-library)
       LIB_PATH=${PREFIX_DIR}/lib
       GCC_LIB_PATH=
+      CROSS_LIB_PATH=
       CXX=${PREFIX_DIR}/bin/g++
       ;;
 esac
@@ -149,6 +151,9 @@ CXXFLAGS="-ggdb3 -DDEBUG_ASSERT @SECTION_FLAGS@ @SECTION_LDFLAGS@"
 case ${query} in
     --built-library)
       LIBS="${LIB_PATH}/libstdc++.la -no-install -rpath ${GCC_LIB_PATH}"
+      if test x@xcompiling@ = x1; then
+        LIBS="${LIBS} -L${CROSS_LIB_PATH}"
+      fi
     case @target_os@ in
         *cygwin*)  
 	  LIBS="${LIBS} -nodefaultlibs -lgcc -lcygwin -luser32
